--- a/app/res/layout/activity_editor.xml
+++ b/app/res/layout/activity_editor.xml
@@ -1,10 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+    
+<LinearLayout 
+    android:id="@+id/root_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+
     <FrameLayout
-        android:id="@+id/main_fragment_root"
+        android:id="@+id/media_holder"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_margin="0dip"
+        android:layout_weight="0.5"
+        android:padding="0dip"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5" >
+
+        <FrameLayout
+            android:id="@+id/details_form_holder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="2dip"
+            android:paddingRight="6dip" />
+    </ScrollView>
+
+    <include
+        android:id="@+id/toolbar_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        layout="@layout/fragment_editor_toolbar_bottom" />
+    
 </LinearLayout>
+
+<FrameLayout
+    android:id="@+id/root_form"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="0dip"
+    android:padding="0dip" />
+
+</FrameLayout>
