--- a/app/res/values/color.xml
+++ b/app/res/values/color.xml
@@ -19,4 +19,8 @@
     
     <color name="context_menu_background">#a0444444</color>
     <color name="context_menu_background_selected">#ff444444</color>
+    
+    <color name="tag_unselected">#80231f20</color>
+    <color name="tag_selected">#80c03d2c</color>
+    
 </resources>
