--- a/app/res/layout/activity_editor.xml
+++ b/app/res/layout/activity_editor.xml
@@ -26,7 +26,7 @@
             <include
                 android:id="@+id/toolbar_bottom"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 layout="@layout/fragment_editor_toolbar_bottom" />
 
@@ -42,9 +42,8 @@
                 <FrameLayout
                     android:id="@+id/details_form_holder"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="2dip"
-                    android:paddingRight="6dip" >
+                    android:layout_height="wrap_content" >
+
                 </FrameLayout>
             </ScrollView>
 
