--- a/app/res/layout/fragment_editor_toolbar_bottom.xml
+++ b/app/res/layout/fragment_editor_toolbar_bottom.xml
@@ -1,35 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/RelativeLayout1"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:layout_margin="0dip"
-    android:background="@drawable/eyewitness_light_grey"
+    android:background="@color/grey_light"
     android:orientation="horizontal"
-    android:padding="0dip"
     android:weightSum="1" >
 
     <LinearLayout
-        android:id="@+id/btnAddTags"
+        android:id="@+id/btnWriteText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_weight="0.5"
         android:gravity="center_horizontal"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:padding="5dp" >
 
         <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_edit_show_tags" />
+            android:id="@+id/ImageView01"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/ic_edit_notes" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/TextView01"
+            style="@style/EditorBottomToolbarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/editor_tags_add"
+            android:layout_marginTop="5dp"
+            android:text="@string/editor_write_text"
+            android:textAllCaps="true"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
     </LinearLayout>
 
-</RelativeLayout>
+    <View
+        android:layout_width="1px"
+        android:layout_height="match_parent"
+        android:background="@color/grey_medium" />
+    
+    <LinearLayout
+        android:id="@+id/btnAddTags"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.5"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:padding="5dp" >
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/ic_edit_show_tags" />
+
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/EditorBottomToolbarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="@string/editor_tags_add"
+            android:textAllCaps="true"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    </LinearLayout>
+
+</LinearLayout>
