--- a/app/res/layout/fragment_forms_fullscreen.xml
+++ b/app/res/layout/fragment_forms_fullscreen.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/details_form_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="1000dp"
-    android:layout_marginLeft="6dip"
-    android:layout_marginRight="6dip"
+    android:divider="@color/blue_washed"
+    android:dividerHeight="1px"
+    android:dividerPadding="10dp"
     android:orientation="vertical"
-    android:id="@+id/details_form_root" />
+    android:padding="10dp"
+    android:showDividers="middle" />
+
