--- a/app/res/layout/popup_tag_context_menu.xml
+++ b/app/res/layout/popup_tag_context_menu.xml
@@ -20,19 +20,19 @@
             android:layout_height="1px"
             android:background="@drawable/white" />
             
-    <Button
-        android:id="@+id/btnNotes"
-        style="@style/context_menu_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        android:text="@string/notes" />
+<!--     <Button -->
+<!--         android:id="@+id/btnNotes" -->
+<!--         style="@style/context_menu_button" -->
+<!--         android:layout_width="match_parent" -->
+<!--         android:layout_height="wrap_content" -->
+<!--         android:paddingLeft="30dp" -->
+<!--         android:paddingRight="30dp" -->
+<!--         android:text="@string/notes" /> -->
     
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:background="@drawable/white" />
+<!--         <View -->
+<!--             android:layout_width="match_parent" -->
+<!--             android:layout_height="1px" -->
+<!--             android:background="@drawable/white" /> -->
         
     <Button
         android:id="@+id/btnForm"
