--- a/app/res/layout/extras_divider_blue.xml
+++ b/app/res/layout/extras_divider_blue.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <View xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="1dip"
-    android:layout_marginBottom="2dip"
-    android:layout_marginTop="2dip"
+    android:layout_height="1px"
+    android:layout_marginBottom="20dip"
+    android:layout_marginTop="20dip"
     android:background="@drawable/blue" />
