--- a/app/res/drawable/extras_button_c_background_inactive.xml
+++ b/app/res/drawable/extras_button_c_background_inactive.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@drawable/eyewitness_dark_grey" />
-    <stroke android:color="@drawable/eyewitness_blue" android:width="1dip"/>
+    <solid android:color="@color/grey_medium_light" />
+<!--     <stroke android:color="@drawable/eyewitness_blue" android:width="1dip"/> -->
 </shape>
