--- a/app/res/layout/fragment_forms_overview.xml
+++ b/app/res/layout/fragment_forms_overview.xml
@@ -55,6 +55,7 @@
         android:id="@+id/btnAddAudio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="Button"
+        android:visibility="gone" />
 
 </LinearLayout>
