--- a/app/res/menu/activity_edit_edit.xml
+++ b/app/res/menu/activity_edit_edit.xml
@@ -1,3 +1,3 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_save" android:title="@string/menu_save" android:orderInCategory="100" android:showAsAction="always" android:enabled="true"/>
+    <item android:id="@+id/menu_done" android:title="@string/menu_done" android:orderInCategory="100" android:showAsAction="always" android:enabled="true"/>
 </menu>
