--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -82,12 +82,14 @@
     
     <style name="button_c">
         <item name="android:background">@drawable/extras_button_c_selector</item>
-        <item name="android:textColor">@drawable/trans_grey_1</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">15sp</item>
     </style>
     
     <style name="button_d">
         <item name="android:background">@drawable/extras_button_d_selector</item>
-        <item name="android:textColor">@drawable/black</item>
+        <item name="android:textColor">@android:color/white</item>
+	    <item name="android:textSize">15sp</item>
     </style>
     
     <style name="button_e">
@@ -117,6 +119,12 @@
     <style name="EditorActionBar" parent="@style/Widget.Sherlock.Light.ActionBar">
     	<item name="background">@drawable/actionbar_background</item>
     	<item name="android:background">@drawable/actionbar_background</item>
+    	<item name="titleTextStyle">@style/EditorActionBarTitle</item>
+    	<item name="android:titleTextStyle">@style/EditorActionBarTitle</item>
     </style>
 
+	<style name="EditorActionBarTitle" parent="@style/TextAppearance.Sherlock.Widget.ActionBar.Title">
+    	<item name="android:textColor">@android:color/white</item>
+	</style>
+    
 </resources>
