New style for the gallery

--- a/app/res/layout/adapter_gallery_grid.xml
+++ b/app/res/layout/adapter_gallery_grid.xml
@@ -1,20 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="64dip"
-    android:layout_height="64dip"
-    android:padding="3dip"
-    android:orientation="vertical"
-    android:id="@+id/gallery_thumb_holder" 
-    android:background="#cccccc"
-    android:gravity="center"
-    >
+<org.witness.iwitness.app.views.SquareFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/gallery_thumb_holder"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:clickable="false"
+    android:focusable="false"
+    android:focusableInTouchMode="false"
+    android:padding="3dip" >
 
-    <ImageView
+    <org.witness.iwitness.app.views.RoundedImageView
         android:id="@+id/gallery_thumb"
-        android:layout_width="64dip"
-        android:layout_height="64dip"
-        android:padding="3dip"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_launcher" />
 
-</LinearLayout>
+    <CheckBox
+        android:id="@+id/chkSelect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="5dp"
+        android:layout_marginRight="5dp"
+        android:button="@drawable/checkbox_gallery"
+        android:clickable="false"
+        android:duplicateParentState="true"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:gravity="center"
+        android:longClickable="false" />
+
+</org.witness.iwitness.app.views.SquareFrameLayout>
