--- a/app/res/layout/activity_home.xml
+++ b/app/res/layout/activity_home.xml
@@ -1,41 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/white"
-    android:orientation="vertical" >
-
-    <TabHost
-        android:id="@android:id/tabhost"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" >
-
-            <TabWidget
-                android:id="@android:id/tabs"
-                android:layout_width="match_parent"
-                android:layout_height="76dip"
-                android:orientation="horizontal"
-                android:background="@drawable/eyewitness_blue" />
-
-            <FrameLayout
-                android:id="@android:id/tabcontent"
-                android:layout_width="0dip"
-                android:layout_height="0dip"
-                android:layout_weight="0" />
-
-            <android.support.v4.view.ViewPager
+<android.support.v4.view.ViewPager
+                xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/view_pager_root"
                 android:layout_width="match_parent"
-                android:layout_height="0dip"
-                android:layout_weight="1"
-                android:background="#333333"
+                android:layout_height="match_parent"
+                android:background="#ffffff"
                  />
-        </LinearLayout>
-    </TabHost>
-
-</LinearLayout>
