Home screen changes (swipeable photo stack and audio note/share buttons)

--- a/app/res/layout/fragment_home_main.xml
+++ b/app/res/layout/fragment_home_main.xml
@@ -2,21 +2,85 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/gallery_root_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ff0000" >
+    android:layout_height="match_parent" >
 
     <include
+        android:id="@+id/toolbar_bottom"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_alignParentBottom="true"
         layout="@layout/fragment_home_toolbar_bottom" />
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:id="@+id/llOperations"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_above="@id/toolbar_bottom" >
+
+        <LinearLayout
+            android:id="@+id/btnAudioNote"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight="0.5"
+            android:gravity="center" >
+
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_home_audio" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/home_audio_note"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        </LinearLayout>
+        
+    	<View
+    	    android:layout_width="1px"
+    	    android:layout_height="match_parent"
+    	    android:layout_marginBottom="10dp"
+    	    android:layout_marginTop="10dp"
+    	    android:background="@color/grey_medium" />
+    
+        <LinearLayout
+            android:id="@+id/btnShare"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_weight="0.5"
+            android:gravity="center" >
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_home_share" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/home_share"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pagerPhotos"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/llOperations"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="Content goes here" />
+    />
 
 </RelativeLayout>
