--- a/app/res/layout/adapter_notification_list_item.xml
+++ b/app/res/layout/adapter_notification_list_item.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/notification_view_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="120dip"
     android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="20dip"
         android:orientation="horizontal" >
 
         <TextView
@@ -26,7 +26,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dip"
         android:orientation="horizontal"
         android:weightSum="1" >
 
@@ -39,13 +39,13 @@
 
         <RelativeLayout
             android:layout_width="0dip"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="0.2" >
 
             <ImageView
                 android:id="@+id/notification_icon"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:scaleType="fitXY" />
 
             <ImageView
