--- a/app/res/layout/fragment_home_user_management.xml
+++ b/app/res/layout/fragment_home_user_management.xml
@@ -65,14 +65,14 @@
         android:layout_marginTop="10dip" >
 
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical" >
 
             <TabWidget
                 android:id="@android:id/tabs"
                 style="@style/iwitness_sub_tab_holder"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="56dip"
                 android:orientation="horizontal" />
 
