--- a/app/res/layout/fragment_user_management_notifications.xml
+++ b/app/res/layout/fragment_user_management_notifications.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/notification_list_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,12 +13,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/no_notifications"
+        android:layout_alignParentTop="true"
         android:visibility="gone" />
 
     <ListView
         android:id="@+id/notifications_list_view"
         android:layout_width="match_parent"
-        android:layout_marginBottom="10dip"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true" />
 
-</LinearLayout>
+</RelativeLayout>
