--- a/app/res/values/color.xml
+++ b/app/res/values/color.xml
@@ -12,7 +12,9 @@
     <drawable name="eyewitness_dark_grey">#ff231f20</drawable>
     
     <color name="grey_dark">#ff404040</color>
+    <color name="grey_dark_semi">#80404040</color>
     <color name="grey_medium">#FF999999</color>
+    <color name="grey_medium_semi">#80999999</color>
     <color name="grey_medium_light">#FFCECDCD</color>
     <color name="grey_light">#FFD1D3D4</color>
     <color name="grey_light_light">#FFEFEFEF</color>
