--- a/app/res/values/styles_wizard.xml
+++ b/app/res/values/styles_wizard.xml
@@ -1,9 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-<style name="WizardTheme" parent="android:Theme">
-   <item name="android:radioButtonStyle">@style/RadioButton</item>
+<resources
+    xmlns:app="http://schemas.android.com/apk/res/org.witness.iwitness"
+    >
+<style name="WizardTheme" parent="Theme.Sherlock.Light.NoActionBar">
+	<item name="actionBarStyle">@style/EditorActionBar</item>
+	<item name="android:actionBarStyle">@style/EditorActionBar</item>
+	<item name="actionModeBackground">@drawable/actionbar_actionmode_background</item>
+	<item name="android:actionModeBackground">@drawable/actionbar_actionmode_background</item>
 </style>
-<style name="RadioButton" parent="@android:style/Widget.CompoundButton.RadioButton">
-   <item name="android:button">@drawable/extras_button_a_selector</item>
+
+<style name="WizardEdittext">
+    <item name="android:background">@android:color/white</item>
+    <item name="android:textColor">#6D6E71</item>
+    <item name="android:padding">4dip</item>
+    <item name="android:layout_marginBottom">10dip</item>
+    <item name="font">Roboto-Italic</item>
+    <item name="android:textSize">15sp</item>
 </style>
+
+<style name="WizardH1" parent="iwitness_h1">
+    <item name="font">Roboto-Bold</item>
+    <item name="android:textSize">20sp</item>
+</style>
+
+<style name="WizardH3" parent="iwitness_h3">
+    <item name="font">Roboto-Regular</item>
+    <item name="android:textSize">15sp</item>
+</style>
+
 </resources>
