Use new setup icons

--- a/app/res/layout/fragment_wizard_take_photo.xml
+++ b/app/res/layout/fragment_wizard_take_photo.xml
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@drawable/ic_menu_key" />
+        android:src="@drawable/ic_setup_key" />
 
     <TextView
         android:id="@+id/TextView01"
