--- a/app/res/layout/fragment_wizard_select_language.xml
+++ b/app/res/layout/fragment_wizard_select_language.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/ic_setup_logo" />
 
     <org.witness.iwitness.app.views.CustomFontTextView
         android:id="@+id/textView1"
@@ -56,7 +56,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/abs__spinner_ab_default_holo_light" />
+            android:layout_marginRight="10dp"
+            android:src="@drawable/ic_setup_dropdown" />
+
     </org.witness.iwitness.app.views.DropdownSpinner>
 
     <Button
