--- a/app/res/layout/fragment_user_management_notifications.xml
+++ b/app/res/layout/fragment_user_management_notifications.xml
@@ -19,8 +19,7 @@
     <ListView
         android:id="@+id/notifications_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true" />
 
 </RelativeLayout>
