--- a/app/res/layout/fragment_user_management_notifications.xml
+++ b/app/res/layout/fragment_user_management_notifications.xml
@@ -20,6 +20,7 @@
         android:id="@+id/notifications_list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
