--- a/app/res/layout/fragment_forms_overview.xml
+++ b/app/res/layout/fragment_forms_overview.xml
@@ -62,4 +62,16 @@
         android:text="Medium Text"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
+    <EditText
+        android:id="@+id/media_notes_edit"
+        style="@style/EditorTopLevelNote"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="top|left"
+        android:layout_weight="1"
+        android:background="@null"
+        android:gravity="top|left"
+        android:text="Medium Text"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
 </LinearLayout>
