--- a/app/res/values/array.xml
+++ b/app/res/values/array.xml
@@ -57,4 +57,22 @@
         <item>si_LK</item>
         <item>tr_TR</item>
     </string-array>
+    
+    <string-array name="lockScreenOptions">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+    <string-array name="lockScreenOptions_">
+        <item>@string/prefs_lock_screen_off</item>
+        <item>@string/prefs_lock_screen_on</item>
+        </string-array>
+    
+    <string-array name="panicActionOptions">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+    <string-array name="panicActionOptions_">
+        <item>@string/prefs_panic_wipe_content</item>
+        <item>@string/prefs_panic_wipe_app</item>
+    </string-array>
 </resources>
