--- a/app/res/layout/fragment_wizard_select_language.xml
+++ b/app/res/layout/fragment_wizard_select_language.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
         android:src="@drawable/ic_setup_logo" />
 
     <org.witness.iwitness.app.views.CustomFontTextView
